--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
         <p>{{ message }}</p>
         <input v-model="message">
     </div>
+    <div id="app-7">
+        <ol>
+          <!--
+            现在我们为每个 todo-item 提供 todo 对象
+            todo 对象是变量，即其内容可以是动态的。
+            我们也需要为每个组件提供一个“key”，稍后再
+            作详细解释。
+          -->
+          <todo-item
+            v-for="item in groceryList"
+            v-bind:todo="item"
+            v-bind:key="item.id"
+            v-bind:id="item.id"
+          ></todo-item>
+        </ol>
+      </div>
     <!-- vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="main.js"></script>
